update with modification stamp and add data source link

--- a/automation/sync_data_with_python_api.ipynb
+++ b/automation/sync_data_with_python_api.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
     "#After a much too long search... you've found the download url. How do you keep your ArcGIS Services up \n",
     "#to date with real time data provided through static URLs? With Pyhton, of course. \n",
     "\n",
-    "#download the file to your computer with requests \n",
+    "#download the file to your computer with requests (source data: https://waterwatch.usgs.gov/index.php?id=ww_currents)\n",
     "import requests\n",
     "\n",
     "shp_url = \"https://waterwatch.usgs.gov/download/?gt=covshp&mt=real&ofmt=zip&mk=1\"\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -116,8 +116,8 @@
        "                        <a href='https://pnw.maps.arcgis.com/home/item.html?id=72c6571bc404491ea8f22ac351f096a8' target='_blank'><b>stream_flow</b>\n",
        "                        </a>\n",
        "                        <br/><img src='https://pnw.maps.arcgis.com/home/js/jsapi/esri/css/images/item_type_icons/featureshosted16.png' style=\"vertical-align:middle;\">Feature Layer Collection by astrong_pnw\n",
-       "                        <br/>Last Modified: March 01, 2018\n",
-       "                        <br/>0 comments, 2 views\n",
+       "                        <br/>Last Modified: March 05, 2018\n",
+       "                        <br/>0 comments, 8 views\n",
        "                    </div>\n",
        "                </div>\n",
        "                "
@@ -126,7 +126,7 @@
        "<Item title:\"stream_flow\" type:Feature Layer Collection owner:astrong_pnw>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
        "{'success': True}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,9 +164,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2018-03-05 16:41:11\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -181,8 +188,8 @@
        "                        <a href='https://pnw.maps.arcgis.com/home/item.html?id=72c6571bc404491ea8f22ac351f096a8' target='_blank'><b>stream_flow</b>\n",
        "                        </a>\n",
        "                        <br/><img src='https://pnw.maps.arcgis.com/home/js/jsapi/esri/css/images/item_type_icons/featureshosted16.png' style=\"vertical-align:middle;\">Feature Layer Collection by astrong_pnw\n",
-       "                        <br/>Last Modified: March 01, 2018\n",
-       "                        <br/>0 comments, 2 views\n",
+       "                        <br/>Last Modified: March 05, 2018\n",
+       "                        <br/>0 comments, 8 views\n",
        "                    </div>\n",
        "                </div>\n",
        "                "
@@ -191,14 +198,26 @@
        "<Item title:\"stream_flow\" type:Feature Layer Collection owner:astrong_pnw>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#reprint item and print modification date\n",
+    "from datetime import datetime\n",
+    "\n",
+    "streamflow_item = gis.content.get('72c6571bc404491ea8f22ac351f096a8')\n",
+    "print(datetime.fromtimestamp(streamflow_item.modified/1000))\n",
     "streamflow_item"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
