a few more edits on the code4sac demo

--- a/python_api/code4sac_demo.ipynb
+++ b/python_api/code4sac_demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -29,16 +29,16 @@
    "metadata": {},
    "source": [
     "City of Sac has some cool data inside their open data site (data.cityofsacramento.org) such as :\n",
-    "* On Street Parking: http://data.cityofsacramento.org/datasets/onstreetparking\n",
-    "* Signs: http://data.cityofsacramento.org/datasets/signs\n",
-    "* Streetlights: http://data.cityofsacramento.org/datasets/streetlights\n",
-    "* City Maintained Trees: http://data.cityofsacramento.org/datasets/city-maintained-trees\n",
-    "* And more!"
+    "* [On Street Parking](http://data.cityofsacramento.org/datasets/onstreetparking)\n",
+    "* [Signs](http://data.cityofsacramento.org/datasets/signs)\n",
+    "* [Streetlights](http://data.cityofsacramento.org/datasets/streetlights)\n",
+    "* [City Maintained Trees](http://data.cityofsacramento.org/datasets/city-maintained-trees)\n",
+    "* [And more!](http://data.cityofsacramento.org/datasets)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
        "                        </a>\n",
        "                        <br/>City Maintained Trees<img src='https://www.arcgis.com/home/js/jsapi/esri/css/images/item_type_icons/featureshosted16.png' style=\"vertical-align:middle;\">Feature Layer Collection by Publisher_SacCity\n",
        "                        <br/>Last Modified: February 16, 2018\n",
-       "                        <br/>0 comments, 1,298 views\n",
+       "                        <br/>0 comments, 1,303 views\n",
        "                    </div>\n",
        "                </div>\n",
        "                "
@@ -65,7 +65,7 @@
        "<Item title:\"City_Maintained_Trees\" type:Feature Layer Collection owner:Publisher_SacCity>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -86,16 +86,16 @@
       "text/html": [
        "<div class=\"item_container\" style=\"height: auto; overflow: hidden; border: 1px solid #cfcfcf; border-radius: 2px; background: #f6fafa; line-height: 1.21429em; padding: 10px;\">\n",
        "                    <div class=\"item_left\" style=\"width: 210px; float: left;\">\n",
-       "                       <a href='https://www.arcgis.com/home/item.html?id=08fcf00d1b69449485ac5911f278643f' target='_blank'>\n",
+       "                       <a href='https://www.arcgis.com/home/item.html?id=5baabba831464159ade593cbb3a50bd2' target='_blank'>\n",
        "                        <img src='http://static.arcgis.com/images/desktopapp.png' class=\"itemThumbnail\">\n",
        "                       </a>\n",
        "                    </div>\n",
        "\n",
        "                    <div class=\"item_right\"     style=\"float: none; width: auto; overflow: hidden;\">\n",
-       "                        <a href='https://www.arcgis.com/home/item.html?id=08fcf00d1b69449485ac5911f278643f' target='_blank'><b>City_Maintained_Trees</b>\n",
+       "                        <a href='https://www.arcgis.com/home/item.html?id=5baabba831464159ade593cbb3a50bd2' target='_blank'><b>City_Maintained_Trees</b>\n",
        "                        </a>\n",
        "                        <br/>City Maintained Trees<img src='https://www.arcgis.com/home/js/jsapi/esri/css/images/item_type_icons/featureshosted16.png' style=\"vertical-align:middle;\">Feature Layer Collection by astrng\n",
-       "                        <br/>Last Modified: April 03, 2018\n",
+       "                        <br/>Last Modified: April 04, 2018\n",
        "                        <br/>0 comments, 0 views\n",
        "                    </div>\n",
        "                </div>\n",
@@ -105,7 +105,7 @@
        "<Item title:\"City_Maintained_Trees\" type:Feature Layer Collection owner:astrng>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1706,7 +1706,7 @@
        "[100550 rows x 17 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1723,6 +1723,89 @@
     "#open features in pandas data frame \n",
     "df = features.df\n",
     "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0         13 to 18\n",
+       "1         19 to 24\n",
+       "2         19 to 24\n",
+       "3           4 to 6\n",
+       "4          7 to 12\n",
+       "5           4 to 6\n",
+       "6           4 to 6\n",
+       "7          7 to 12\n",
+       "8          7 to 12\n",
+       "9           4 to 6\n",
+       "10        37 to 48\n",
+       "11          4 to 6\n",
+       "12         7 to 12\n",
+       "13         7 to 12\n",
+       "14          4 to 6\n",
+       "15        13 to 18\n",
+       "16          4 to 6\n",
+       "17        25 to 36\n",
+       "18        25 to 36\n",
+       "19          4 to 6\n",
+       "20          4 to 6\n",
+       "21          4 to 6\n",
+       "22          4 to 6\n",
+       "23          4 to 6\n",
+       "24         7 to 12\n",
+       "25        25 to 36\n",
+       "26        25 to 36\n",
+       "27        25 to 36\n",
+       "28        25 to 36\n",
+       "29          0 to 3\n",
+       "            ...   \n",
+       "100520        None\n",
+       "100521        None\n",
+       "100522        None\n",
+       "100523        None\n",
+       "100524        None\n",
+       "100525        None\n",
+       "100526        None\n",
+       "100527      0 to 3\n",
+       "100528     7 to 12\n",
+       "100529        None\n",
+       "100530      0 to 3\n",
+       "100531    13 to 18\n",
+       "100532     7 to 12\n",
+       "100533      4 to 6\n",
+       "100534     7 to 12\n",
+       "100535      4 to 6\n",
+       "100536      0 to 3\n",
+       "100537      0 to 3\n",
+       "100538    19 to 24\n",
+       "100539    19 to 24\n",
+       "100540    25 to 36\n",
+       "100541    13 to 18\n",
+       "100542      0 to 3\n",
+       "100543      0 to 3\n",
+       "100544        None\n",
+       "100545        None\n",
+       "100546      0 to 3\n",
+       "100547      0 to 3\n",
+       "100548      0 to 3\n",
+       "100549        None\n",
+       "Name: DBH, Length: 100550, dtype: object"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Can we calculate carbon storage from the Diameter at Breast Height 'DBH' (i.e., tree diameter measured at 4.5 ft above ground)\n",
+    "DBH = df['DBH']\n",
+    "DBH"
    ]
   },
   {
