--- a/python_api/code4sac_demo.ipynb
+++ b/python_api/code4sac_demo.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# **Analyze Streetlight Cost by Sacramento Neighborhood**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Import Modules and Authenticate with the ArcGIS API for Python**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -18,6 +32,7 @@
     "#import the API and getpass\n",
     "from arcgis.gis import GIS\n",
     "from arcgis.features import FeatureLayer\n",
+    "from arcgis.features.analysis import aggregate_points\n",
     "from getpass import getpass\n",
     "import pandas as pd\n",
     "import requests\n",
@@ -28,8 +43,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Download Data from the City of Sacramento Open Data Portal**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -56,6 +78,13 @@
     "f.write(download_decoded)\n",
     "f.close\n",
     "print(\"csv downloaded\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Read Streetlights CSV with Pandas and Calculate KwH and Cost per Year**"
    ]
   },
   {
@@ -506,6 +535,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Publish new calculations to ArcGIS Online**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 58,
    "metadata": {},
@@ -542,6 +578,13 @@
     "lights = gis.content.search(query='title:Sac Streetlights KwH and Cost AND type:Feature Service')\n",
     "sac_lights = lights[0]\n",
     "sac_lights"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Map Sacramento streetlights and neighborhoods in ArcGIS Online**"
    ]
   },
   {
@@ -618,6 +661,13 @@
    "source": [
     "#add sac lights layer\n",
     "m.add_layer(sac_lights)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Use pandas to select highest cost streetlights**"
    ]
   },
   {
@@ -805,6 +855,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Add highest cost streetlights to ArcGIS Online**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 62,
    "metadata": {},
@@ -872,6 +929,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Run aggregate points analysis to sum highest streetlights by neighborhood**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 65,
    "metadata": {},
@@ -889,8 +953,6 @@
    ],
    "source": [
     "#Let's intersect this data with the City of Sacramento Neighborhoods layer: http://data.cityofsacramento.org/datasets/neighborhoods\n",
-    "from arcgis.features.analysis import aggregate_points\n",
-    "\n",
     "#grab neighborhoods data \n",
     "neighborhoods = gis.content.get('49f20f1612ae4f0a9292eb65f8bd4013')\n",
     "\n",
@@ -936,6 +998,13 @@
    ],
    "source": [
     "high_cost_lights_by_nh"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Query the aggregate points analysis  and print table**"
    ]
   },
   {
